--- a/frontend/public/azure.html
+++ b/frontend/public/azure.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>Netlight Live</title>
+    <title>Netlight Podcasts</title>
     <link href="https://amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet" />
     <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
     <style type="text/css">
