--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Netlight Live</title>
+		<title>Netlight Podcasts</title>
 		<link href="/Proxima Nova-Webfont-3/Webfonts/proximanova_bold_macroman/stylesheet.css" rel="stylesheet" type="text/css" />
 		<link href="/Proxima Nova-Webfont-3/Webfonts/proximanova_regular_macroman/stylesheet.css" rel="stylesheet" type="text/css" />
 		<link href="/css.css" rel="stylesheet" type="text/css" />
